[gd_scene load_steps=5 format=3]

[ext_resource type="PackedScene" path="res://windows/preferences/bool_option.tscn" id="1"]
[ext_resource type="Script" path="res://windows/preferences/preferences.gd" id="2"]
[ext_resource type="PackedScene" path="res://windows/preferences/float_option.tscn" id="3"]
[ext_resource type="Script" path="res://windows/preferences/lang_option.gd" id="4"]

[node name="Preferences" type="WindowDialog"]
anchor_left = 0.323
anchor_top = 0.283
anchor_right = 0.799
anchor_bottom = 0.914
margin_left = -0.440002
margin_top = 0.240005
margin_right = -303.72
margin_bottom = -101.08
popup_exclusive = true
window_title = "Preferences"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_right = 304.0
margin_bottom = 322.0
rect_min_size = Vector2( 289, 172 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="General" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/General"]
margin_right = 296.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/General/HBoxContainer"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Language:"

[node name="Language" type="OptionButton" parent="VBoxContainer/TabContainer/General/HBoxContainer"]
margin_left = 67.0
margin_right = 96.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 10 )
script = ExtResource( 4 )
config_variable = "locale"

[node name="InstallLanguage" type="Button" parent="VBoxContainer/TabContainer/General/HBoxContainer"]
margin_left = 100.0
margin_right = 152.0
margin_bottom = 20.0
text = "Install"

[node name="DownloadLanguage" type="Button" parent="VBoxContainer/TabContainer/General/HBoxContainer"]
margin_left = 156.0
margin_right = 231.0
margin_bottom = 20.0
text = "Download"

[node name="Space1" type="Control" parent="VBoxContainer/TabContainer/General"]
margin_top = 24.0
margin_right = 296.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 10 )

[node name="ConfirmQuit" parent="VBoxContainer/TabContainer/General" instance=ExtResource( 1 )]
margin_top = 38.0
margin_right = 296.0
margin_bottom = 62.0
config_variable = "confirm_quit"

[node name="ConfirmCloseProject" parent="VBoxContainer/TabContainer/General" instance=ExtResource( 1 )]
margin_top = 66.0
margin_right = 296.0
margin_bottom = 90.0
text = "Confirm when closing a project"
config_variable = "confirm_close_project"

[node name="Space3" type="Control" parent="VBoxContainer/TabContainer/General"]
margin_top = 94.0
margin_right = 296.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 10 )

[node name="GuiScale" type="HBoxContainer" parent="VBoxContainer/TabContainer/General"]
margin_top = 108.0
margin_right = 296.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/General/GuiScale"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
text = "UI scale (0 = auto):"

[node name="GuiScale" parent="VBoxContainer/TabContainer/General/GuiScale" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_right = 182.0
margin_bottom = 24.0
value = 0.0
max_value = 2.0
step = 0.01
float_only = true
config_variable = "ui_scale"

[node name="Gui3DPreviewResolution" type="HBoxContainer" parent="VBoxContainer/TabContainer/General"]
margin_top = 136.0
margin_right = 296.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/General/Gui3DPreviewResolution"]
margin_top = 5.0
margin_right = 145.0
margin_bottom = 19.0
hint_tooltip = "Higher values result in better antialiasing, but are more demanding to render."
mouse_filter = 1
text = "3D preview resolution:"

[node name="Gui3DPreviewResolution" parent="VBoxContainer/TabContainer/General/Gui3DPreviewResolution" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 149.0
margin_right = 207.0
margin_bottom = 24.0
hint_tooltip = "Higher values result in better antialiasing, but are more demanding to render."
text = "2.0"
value = 2.0
min_value = 1.0
max_value = 2.5
step = 0.1
float_only = true
config_variable = "ui_3d_preview_resolution"

[node name="Gui3DPreviewTesselationDetail" type="HBoxContainer" parent="VBoxContainer/TabContainer/General"]
margin_top = 164.0
margin_right = 296.0
margin_bottom = 188.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/General/Gui3DPreviewTesselationDetail"]
margin_top = 5.0
margin_right = 191.0
margin_bottom = 19.0
hint_tooltip = "Higher values result in better tesselation quality, but are more demanding to render and require more memory.
Don't increase this setting above 256 on slower machines!
This only affects the 3D preview when using tesselation, not parallax occlusion mapping."
mouse_filter = 1
text = "3D preview tesselation detail:"

[node name="Gui3DPreviewTesselationDetail" parent="VBoxContainer/TabContainer/General/Gui3DPreviewTesselationDetail" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 195.0
margin_right = 253.0
margin_bottom = 24.0
hint_tooltip = "Higher values result in better tesselation quality, but are more demanding to render and require more memory.
Don't increase this setting above 256 on slower machines!
This only affects the 3D preview when using tesselation, not parallax occlusion mapping."
text = "256"
value = 256.0
min_value = 256.0
max_value = 1024.0
step = 1.0
float_only = true
config_variable = "ui_3d_preview_tesselation_detail"

[node name="Gui3DPreviewSunShadow" parent="VBoxContainer/TabContainer/General" instance=ExtResource( 1 )]
margin_top = 192.0
margin_right = 296.0
margin_bottom = 216.0
hint_tooltip = "If enabled, the DirectionalLight will cast shadows in the 3D preview. This has a moderate performance cost.
The effect of this shadow is only visible when using a tesselated mesh or a custom object.
Changes to this setting are only applied on application restart."
text = "3D preview sun shadow (requires restart)"
config_variable = "ui_3d_preview_sun_shadow"

[node name="Space2" type="Control" parent="VBoxContainer/TabContainer/General"]
margin_top = 220.0
margin_right = 296.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 10 )

[node name="EnableVSync" parent="VBoxContainer/TabContainer/General" instance=ExtResource( 1 )]
margin_top = 234.0
margin_right = 296.0
margin_bottom = 258.0
text = "Enable VSync"
config_variable = "vsync"

[node name="FPSLimit" type="HBoxContainer" parent="VBoxContainer/TabContainer/General"]
margin_top = 262.0
margin_right = 296.0
margin_bottom = 286.0

[node name="Label1" type="Label" parent="VBoxContainer/TabContainer/General/FPSLimit"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
hint_tooltip = "A higher FPS limit may result in smoother operation but may use more CPU/GPU resources.
Higher values may increase power usage, leading to reduced battery life on laptops."
mouse_filter = 1
text = "FPS limit:"

[node name="FPSLimit" parent="VBoxContainer/TabContainer/General/FPSLimit" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 122.0
margin_bottom = 24.0
hint_tooltip = "A higher FPS limit may result in smoother operation but may use more CPU/GPU resources.
Higher values may increase power usage, leading to reduced battery life on laptops."
text = "145"
value = 145.0
min_value = 20.0
max_value = 200.0
step = 1.0
float_only = true
config_variable = "fps_limit"

[node name="Space" type="Control" parent="VBoxContainer/TabContainer/General/FPSLimit"]
margin_left = 126.0
margin_right = 141.0
margin_bottom = 24.0
rect_min_size = Vector2( 15, 0 )

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/General/FPSLimit"]
margin_left = 145.0
margin_top = 5.0
margin_right = 234.0
margin_bottom = 19.0
hint_tooltip = "A higher FPS limit may result in smoother operation but may use more CPU/GPU resources.
Higher values may increase power usage, leading to reduced battery life on laptops."
mouse_filter = 1
text = "Idle FPS limit:"

[node name="IdleFPSLimit" parent="VBoxContainer/TabContainer/General/FPSLimit" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_right = 296.0
margin_bottom = 24.0
hint_tooltip = "A higher FPS limit may result in smoother operation but may use more CPU/GPU resources.
Higher values may increase power usage, leading to reduced battery life on laptops."
text = "145"
value = 20.0
min_value = 1.0
max_value = 20.0
step = 1.0
float_only = true
config_variable = "idle_fps_limit"

[node name="Bake" type="GridContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
columns = 2

[node name="LabelRayCount" type="Label" parent="VBoxContainer/TabContainer/Bake"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( -266.571, 61 )
text = "Ray count:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayCount" parent="VBoxContainer/TabContainer/Bake" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 162.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( -336.571, 66 )
value = 64.0
min_value = 8.0
max_value = 256.0
step = 1.0
float_only = true
config_variable = "bake_ray_count"

[node name="LabelRayLength" type="Label" parent="VBoxContainer/TabContainer/Bake"]
margin_top = 33.0
margin_right = 100.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( -266.571, 61 )
text = "Ray length:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayLength" parent="VBoxContainer/TabContainer/Bake" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 28.0
margin_right = 162.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( -336.571, 66 )
value = 128.0
min_value = 32.0
max_value = 1024.0
step = 1.0
float_only = true
config_variable = "bake_ao_ray_dist"

[node name="LabelRayBias" type="Label" parent="VBoxContainer/TabContainer/Bake"]
margin_top = 61.0
margin_right = 100.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( -266.571, 61 )
text = "Ray bias:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayBias" parent="VBoxContainer/TabContainer/Bake" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 56.0
margin_right = 162.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -336.571, 66 )
value = 0.005
max_value = 1024.0
step = 0.001
float_only = true
config_variable = "bake_ao_ray_bias"

[node name="LabelDenoiseRadius" type="Label" parent="VBoxContainer/TabContainer/Bake"]
margin_top = 89.0
margin_right = 100.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( -266.571, 61 )
text = "Denoise radius:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DenoiseRadius" parent="VBoxContainer/TabContainer/Bake" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 84.0
margin_right = 162.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( -336.571, 66 )
value = 3.0
min_value = 1.0
max_value = 10.0
step = 1.0
float_only = true
config_variable = "bake_denoise_radius"

[node name="Graph" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="AutoSizeComment" parent="VBoxContainer/TabContainer/Graph" instance=ExtResource( 1 )]
margin_right = 270.0
pressed = true
text = "Auto size comment node to selection"
config_variable = "auto_size_comment"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 326.0
margin_right = 304.0
margin_bottom = 326.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 116.0
margin_top = 330.0
margin_right = 304.0
margin_bottom = 350.0
size_flags_horizontal = 8

[node name="Apply" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "Apply"

[node name="OK" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "OK"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "Cancel"

[connection signal="about_to_show" from="." to="." method="_on_Preferences_about_to_show"]
[connection signal="popup_hide" from="." to="." method="queue_free"]
[connection signal="minimum_size_changed" from="VBoxContainer" to="." method="_on_VBoxContainer_minimum_size_changed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/General/HBoxContainer/InstallLanguage" to="." method="_on_InstallLanguage_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/General/HBoxContainer/DownloadLanguage" to="." method="_on_DownloadLanguage_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
